# sentinel-iot-network-monitor

./: .gitignore  README.md
infrastructure/monitoring/: dashboard.json
iot/network-monitor/: CMakeLists.txt  diagram.json  partitions.csv  sdkconfig.old  wokwi.toml
iot/network-monitor/main/: CMakeLists.txt  config_manager.c  config_manager.h  endpoints.c  endpoints.h  http_server.c  http_server.h  main.c  monitoring.c  monitoring.h  monitoring_v2.c  monitoring_v2.h  mqtt_manager.c  mqtt_manager.h  wifi_manager.c  wifi_manager.h
iot/network-monitor/main/spiffs_data/: config.json
rabbitmq/: rabbitmq.conf
sentinel-backend/: Dockerfile
sentinel-backend/cmd/: main.go
sentinel-backend/cmd/configs/: config.yaml
sentinel-backend/internal/api/: handlers.go  routes.go  server.go
sentinel-backend/internal/api/data/: handler.go
sentinel-backend/internal/api/status/: handler.go
sentinel-backend/internal/config/: config.go
sentinel-backend/internal/influxdb/: client.go
sentinel-backend/internal/logger/: logger.go
sentinel-backend/internal/mqtt/: client.go  handler.go
sentinel-backend/internal/server/: server.go
sentinel-backend/pkg/models/: access_point.go  device.go  packet.go
